--- a/InfoPointUI/InfoPointUI.csproj
+++ b/InfoPointUI/InfoPointUI.csproj
@@ -26,9 +26,9 @@
     <Resource Include="Assets\Images\empty_image.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-    <EmbeddedResource Include="Assets\Images\gps_pin.png">
+    <Resource Include="Assets\Images\gps_pin.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </Resource>
     <Resource Include="Assets\Images\nurofen400.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
