imagine tile ok so load async de imagini

--- a/InfoPointUI/InfoPointUI.csproj
+++ b/InfoPointUI/InfoPointUI.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Controls\" />
+    <Folder Include="Resources\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
 
