Integrare cu locatia Quant

--- a/InfoPointServer/appsettings.json
+++ b/InfoPointServer/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProductDb": "Server=localhost;Database=InfoPoint;Trusted_Connection=True;"
+  },
+  "Store": {
+    "Id": "DrMax_Popesti"
+  },
+  "Quant": {
+    "Username": "farmacie_user",
+    "Password": "parola_secreta"
+  }
+
 }
