Refactoring: Moving to Services, working on standby Window

--- a/InfoPointUI/InfoPointUI.csproj
+++ b/InfoPointUI/InfoPointUI.csproj
@@ -19,8 +19,14 @@
 
   <ItemGroup>
     <Folder Include="Resources\" />
-    <Folder Include="Services\" />
 
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
+    <PackageReference Include="NLog.Extensions.Hosting" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
