Implemented human face detection

--- a/InfoPointUI/InfoPointUI.csproj
+++ b/InfoPointUI/InfoPointUI.csproj
@@ -48,6 +48,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="cascade\haarcascade_frontalface_default.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="cascade\haarcascade_upperbody.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
