Added InfoPointShared as shared library for common source files

--- a/InfoPointUI/InfoPointUI.csproj
+++ b/InfoPointUI/InfoPointUI.csproj
@@ -59,4 +59,6 @@
     </Content>
   </ItemGroup>
 
+  <Import Project="..\InfoPointShared\InfoPointShared.projitems" Label="Shared" />
+
 </Project>
