--- a/InfoPointUI/InfoPointUI.csproj
+++ b/InfoPointUI/InfoPointUI.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
     <PackageReference Include="NLog.Extensions.Hosting" Version="6.1.0" />
     <PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
