--- a/InfoPointUI/appsettings.json
+++ b/InfoPointUI/appsettings.json
@@ -1,11 +1,16 @@
 {
   "ApiSettings": {
-    "BaseUrl": "https://localhost:7175",
+    "BaseUrl": "http://localhost:5000",
     "TimeoutSeconds": 30
   },
   "TabletSettings": {
     "Id": "TABLET-001",
-    "Location": "Cosmetice"
+    "Location": "Cosmetice",
+    "StoreCode": "DRMAX-001"
+  },
+  "PageSettings": {
+    "DefaultPageSize": 28,
+    "MaxPageSize": 50
   },
   "Logging": {
     "LogLevel": {
